===========================================================================
2009-01-04      version 0.11.6
===========================================================================
2009-01-04:	James Osborn
	Bug fix in asqtad inverter for QOP_EVENODD source.

===========================================================================
2008-06-23      version 0.11.5
===========================================================================
2008-06-22:	James Osborn
	Improve inner rsq request in asqtad inverter.
	More changes to eigCG.

2008-06-06:	James Osborn
	Added linalg.h to Makefile.am.

===========================================================================
2008-06-03      version 0.11.4
===========================================================================
2008-06-03:	James Osborn
	Added --enable-underscores option for linking with blas/lapack.
	Correct for factor of 1/2 in creation of HISQ links.

2008-06-02:	James Osborn
	Added --enable-blas and --enable-lapack configure options which
	enable blas based CG and eigCG codes.
	Fixed memory leak in HISQ code.

===========================================================================
2008-06-02      version 0.11.3
===========================================================================
2008-06-02:	Carleton DeTar
	Added HISQ inverter by Alan Gray.

===========================================================================
2008-04-14      version 0.11.2
===========================================================================
2008-04-14:	James Osborn
	Now make sure QOP is initialized before using.

2008-04-12:	James Osborn
	Fix to clover term.

===========================================================================
2008-04-12      version 0.11.1
===========================================================================
2008-04-12:	James Osborn
	Fixed up clover term, should now be usable if passed in.

2008-04-08:	James Osborn
	Initial version of blas based CG, disabled for now.