@@ -1,3 +1,6 @@
+2009-01-11:	James Osborn
+	Fixed name conflict in invert_cg_blas_p.c.
+
 ===========================================================================
 2009-01-04      version 0.11.6
 ===========================================================================
